--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.3",
-    "@angular/cli": "~15.1.3",
+    "@angular/cli": "^15.2.9",
     "@angular/compiler-cli": "^15.1.0",
+    "@angular/localize": "^15.2.9",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
@@ -33,6 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "tslint": "~6.1.0",
     "typescript": "~4.9.4"
   }
 }
